--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.068Z",
+        "lastAccessed": "2025-04-30T08:15:30.068Z"
     },
     {
         "key": "sb",
@@ -14,26 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
-    },
-    {
-        "key": "datr",
-        "value": "gP4QaOPw3y7yaMnKguFMq7UV",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61574729876573",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.068Z",
+        "lastAccessed": "2025-04-30T08:15:30.068Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.068Z",
+        "lastAccessed": "2025-04-30T08:15:30.068Z"
     },
     {
         "key": "ps_n",
@@ -50,26 +32,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.068Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
     },
     {
-        "key": "fr",
-        "value": "1mvrDbFtHvuUrHKxC.AWeNH6yKcolD54egi_kQvsP8sKTORuiMHQFjdgbRYqbYzLFF0dU.BoEQHq..AAA.0.0.BoEQHq.AWe_b9J0l6LUuG956NPcOFF4S7E",
+        "key": "datr",
+        "value": "3tsRaBvhfcAzWUKfUmkcgs19",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
-    },
-    {
-        "key": "xs",
-        "value": "38%3AZxDSKcZngHGpxQ%3A2%3A1745944227%3A-1%3A5903%3A%3AAcWIRalOTUuofJHva4APN_TxfVAM7f3Kdbgn5rD5Sw",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.075Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
     },
     {
         "key": "wd",
@@ -77,16 +50,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.075Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1745990511540%2C%22v%22%3A1%7D",
+        "key": "c_user",
+        "value": "61574729876573",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-30T05:21:54.901Z",
-        "lastAccessed": "2025-04-30T05:21:54.901Z"
+        "creation": "2025-04-30T08:15:30.075Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
+    },
+    {
+        "key": "fr",
+        "value": "1mvrDbFtHvuUrHKxC.AWeZniLzObsbnukIWYphA9IVwjH9eDotyGYg1c3_GaZ2-9qTxFo.BoEQHq..AAA.0.0.BoEdvu.AWdXMp4LPBXmNRoAVhYzEfAlERw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-30T08:15:30.075Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
+    },
+    {
+        "key": "xs",
+        "value": "12%3ATIyLVtUDe1JTuQ%3A2%3A1746000879%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-30T08:15:30.075Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1746000916049%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-30T08:15:30.075Z",
+        "lastAccessed": "2025-04-30T08:15:30.075Z"
     }
 ]
