--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,120 @@
 [
     {
+        "key": "dbln",
+        "value": "%7B%22100073613677744%22%3A%223pzuaaiG%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "sb",
+        "value": "PiMzaDljF4f4xxpeESupArlO",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "datr",
+        "value": "P2w4aF2-L0MBl76AbQPCnS25",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61574709753474",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "fr",
+        "value": "16Ty9CXK0eqANrVbw.AWcPxVEJ8iO1v6OvVJ3UGd7ccNRqQcrVB0aEDcdBhijILIcnioI.BoOoKb..AAA.0.0.BoOs1l.AWdMjvB__xP7xaz87FdO16EUh1E",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "xs",
+        "value": "50%3AY8uK7Ni77cVgHQ%3A2%3A1748684134%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B575x314x3.43505597114563",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100734368%3BT%3A29144841",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748690458",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
+    },
+    {
         "key": "dpr",
         "value": "3.7835533618927",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
-    },
-    {
-        "key": "sb",
-        "value": "LyETaJhx2gSya7HfKdy9jCgb",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
-    },
-    {
-        "key": "datr",
-        "value": "MCETaN4zX-tWfXMbDHsyKWik",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
     },
     {
         "key": "wd",
@@ -32,43 +122,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61575330675737",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
-    },
-    {
-        "key": "fr",
-        "value": "0iilYxEL8dVHvRIFC.AWd5tPxfe-8D_5UDcsNXL99-Gc7bkHnkPEYERCuosNrp0tyzweY.BoEyE_..AAA.0.0.BoEyE_.AWf-qPbswGua6prodllQZlDrp5c",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
-    },
-    {
-        "key": "xs",
-        "value": "35%3Aa5OYnxeHc1wtMQ%3A2%3A1746084160%3A-1%3A7880",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1746084198796%2C%22v%22%3A1%7D",
+        "value": "C%7B%22lm3%22%3A%22g.9589266144524621%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1748943848678%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-01T07:23:21.970Z",
-        "lastAccessed": "2025-05-01T07:23:21.970Z"
+        "creation": "2025-06-03T09:44:13.062Z",
+        "lastAccessed": "2025-06-03T09:44:13.062Z"
     }
 ]
