--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.152Z",
+        "lastAccessed": "2025-06-03T10:55:11.152Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "datr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "locale",
@@ -50,35 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61574709753474",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
-    },
-    {
-        "key": "fr",
-        "value": "16Ty9CXK0eqANrVbw.AWcPxVEJ8iO1v6OvVJ3UGd7ccNRqQcrVB0aEDcdBhijILIcnioI.BoOoKb..AAA.0.0.BoOs1l.AWdMjvB__xP7xaz87FdO16EUh1E",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
-    },
-    {
-        "key": "xs",
-        "value": "50%3AY8uK7Ni77cVgHQ%3A2%3A1748684134%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "vpd",
@@ -86,17 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100734368%3BT%3A29144841",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "wl_cbv",
@@ -104,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "dpr",
@@ -113,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
         "key": "wd",
@@ -122,16 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22lm3%22%3A%22g.9589266144524621%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1748943848678%2C%22v%22%3A1%7D",
+        "key": "c_user",
+        "value": "61574709753474",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T09:44:13.062Z",
-        "lastAccessed": "2025-06-03T09:44:13.062Z"
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
+    },
+    {
+        "key": "fr",
+        "value": "16Ty9CXK0eqANrVbw.AWfYeEBs95uH43kEcteRq6E5t_7AY3qbWS3zAvze3rSlHTGXJgM.BoOoKb..AAA.0.0.BoPtQw.AWeuFhLvybmw7yLnHjD6r8hrR2E",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
+    },
+    {
+        "key": "xs",
+        "value": "24%3AN1pUonTAmLxwjg%3A2%3A1748948018%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22lm3%22%3A%22g.24065741623030451%22%2C%22t3%22%3A%5B%7B%22o%22%3A0%2C%22i%22%3A%22g.30153920710888498%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.9985883704808029%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.9589266144524621%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.9091855440862531%22%7D%5D%2C%22utc3%22%3A1748948110334%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T10:55:11.153Z",
+        "lastAccessed": "2025-06-03T10:55:11.153Z"
     }
 ]
