--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.180Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "datr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "wl_cbv",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "dpr",
@@ -77,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
-    },
-    {
-        "key": "wd",
-        "value": "712x1303",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "c_user",
@@ -95,25 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "fr",
-        "value": "16Ty9CXK0eqANrVbw.AWfYeEBs95uH43kEcteRq6E5t_7AY3qbWS3zAvze3rSlHTGXJgM.BoOoKb..AAA.0.0.BoPtQw.AWeuFhLvybmw7yLnHjD6r8hrR2E",
+        "value": "1KBHWPHfgMYikmB6E.AWcwH_NUGLWr6fdyDYp4Frm_FjiQI6TnV98Bu9x6ZYnpYjhcJD0.BoPtwp..AAA.0.0.BoPtwp.AWfuc4r8pgtsVFc5YWUtytLL6bU",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     },
     {
         "key": "xs",
-        "value": "24%3AN1pUonTAmLxwjg%3A2%3A1748948018%3A-1%3A-1",
+        "value": "24%3AN1pUonTAmLxwjg%3A2%3A1748948018%3A-1%3A-1%3A%3AAcWdLXeSYNsm2XB_7G8OqSbsCNczUlo-XouaYmGI9g",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T11:04:26.181Z",
-        "lastAccessed": "2025-06-03T11:04:26.181Z"
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22lm3%22%3A%22g.30153920710888498%22%2C%22t3%22%3A%5B%7B%22o%22%3A0%2C%22i%22%3A%22sc.30172698259010836%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.10010813739001088%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.24065741623030451%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.9985883704808029%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.9589266144524621%22%7D%2C%7B%22o%22%3A0%2C%22i%22%3A%22g.9091855440862531%22%7D%5D%2C%22utc3%22%3A1748950352927%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
+    },
+    {
+        "key": "wd",
+        "value": "712x1303",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T11:33:17.152Z",
+        "lastAccessed": "2025-06-03T11:33:17.152Z"
     }
 ]
