--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.169Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.587Z",
+        "lastAccessed": "2025-06-03T18:00:52.587Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.587Z",
+        "lastAccessed": "2025-06-03T18:00:52.587Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.587Z",
+        "lastAccessed": "2025-06-03T18:00:52.587Z"
     },
     {
         "key": "ps_n",
@@ -32,17 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
-    },
-    {
-        "key": "datr",
-        "value": "P2w4aF2-L0MBl76AbQPCnS25",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.587Z",
+        "lastAccessed": "2025-06-03T18:00:52.587Z"
     },
     {
         "key": "locale",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.587Z",
+        "lastAccessed": "2025-06-03T18:00:52.587Z"
     },
     {
         "key": "vpd",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
     },
     {
         "key": "wl_cbv",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
     },
     {
         "key": "dpr",
@@ -77,35 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
     },
     {
-        "key": "c_user",
-        "value": "61574709753474",
+        "key": "datr",
+        "value": "zjc_aGHWrolpKczNmyGC5Vgw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
-    },
-    {
-        "key": "fr",
-        "value": "1KBHWPHfgMYikmB6E.AWcwH_NUGLWr6fdyDYp4Frm_FjiQI6TnV98Bu9x6ZYnpYjhcJD0.BoPtwp..AAA.0.0.BoPtwp.AWfuc4r8pgtsVFc5YWUtytLL6bU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
-    },
-    {
-        "key": "xs",
-        "value": "24%3AN1pUonTAmLxwjg%3A2%3A1748948018%3A-1%3A-1%3A%3AAcWdLXeSYNsm2XB_7G8OqSbsCNczUlo-XouaYmGI9g",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
     },
     {
         "key": "wd",
@@ -113,7 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T15:08:34.190Z",
-        "lastAccessed": "2025-06-03T15:08:34.190Z"
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61574709753474",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
+    },
+    {
+        "key": "fr",
+        "value": "1KBHWPHfgMYikmB6E.AWehyDxzuafMgrKAtfdHFksRz9qLrVk2JZXwkoOyHcW9u0wHqVQ.BoPtwp..AAA.0.0.BoPzgK.AWdoUT4y0cRybD1JyKeBlxxutc8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
+    },
+    {
+        "key": "xs",
+        "value": "29%3A3YOa1n_f_QM3iw%3A2%3A1748973579%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1748973651532%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-03T18:00:52.588Z",
+        "lastAccessed": "2025-06-03T18:00:52.588Z"
     }
 ]
